<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context="ee.ut.cs.mc.and.testingapplication1311.MainActivity"
    android:orientation="vertical"
    style="@style/Base.TextAppearance.AppCompat.Inverse">

    <LinearLayout android:orientation="horizontal" android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="Name"
            android:id="@+id/tv_item_name_label"
            android:textStyle="bold"
            android:textColor="@android:color/primary_text_dark"
            android:layout_weight="4" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="Price"
            android:id="@+id/tv_item_cost_label"
            android:textColor="@android:color/primary_text_dark"
            android:layout_weight="1" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="Qty"
            android:id="@+id/tv_item_amount_label"
            android:textColor="@android:color/primary_text_dark"
            android:layout_gravity="right"
            android:layout_weight="1" />
    </LinearLayout>

    <ListView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:id="@+id/shoppingListView"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_weight="3" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center_vertical">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="Total cost:"
            android:id="@+id/tv_sum"
            android:layout_weight="3" />

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="Clear All"
            android:onClick="onClearButtonClicked"
            android:id="@+id/button_clear"
            android:layout_weight="1" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center_horizontal"
        android:layout_weight="1"
        android:orientation="horizontal">


        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/editText_name"
            android:layout_centerVertical="true"
            android:layout_alignParentStart="true"
            android:hint="Item Name"
            android:layout_weight="3" />

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="Add"
            android:id="@+id/button"
            android:layout_alignBottom="@+id/editText_price"
            android:layout_alignParentEnd="true"
            android:onClick="onNewItemButtonClicked"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_weight="1" />
    </LinearLayout>


</LinearLayout>
